deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskboard
  labels:
    name: taskboard
    app: taskboard
